corrected mobile checkin button alignment

--- a/www/css/styles.mobile.less
+++ b/www/css/styles.mobile.less
@@ -120,14 +120,9 @@
             font-style: italic;
         }
         .badge {
-            width: 60px;
             position: absolute;
-            top: 4px;
-            right: 60px;
-            margin: 0;
-            > * {
-                padding: .5em 1em .55em;
-            }
+            top: 0;
+            right: 0;
         }
     }
 }
